--- a/index.html
+++ b/index.html
@@ -1,12 +1,115 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Everit OpenSource</title>
+  <head>
+    <meta charset="utf-8">
+<title>
+    Everit OpenSource
+</title>
+
+<!-- Bootstrap core CSS -->
+<link href="css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Documentation extras -->
+<link href="css/docs.min.css" rel="stylesheet">
+<link href="css/everit.css" rel="stylesheet">
+
 </head>
+  <body class="bs-docs-home">
+    <a class="sr-only" href="#content">Skip to main content</a>
 
-<body>
-Coming soon......
-</body>
+    <!-- Docs master nav -->
+    <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+  <div class="container">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="#" class="navbar-brand">Everit</a>
+    </div>
+    <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+      <ul class="nav navbar-nav">
+        <li>
+          <a href="components.html">Components</a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="https://twitter.com/EveritOrg">Twitter</a></li>
+        <li><a href="http://everitorg.wordpress.com/">Blog</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
+
+    <!-- Page content of course! -->
+<div class="bs-docs-masthead everit-header" id="content" role="main">
+  <div class="container">
+    <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">E</span>
+    <!-- <h1>Bootstrap</h1> -->
+    <p class="lead">Developer of an Open Future.</p>
+
+  </div>
+</div>
+
+<div class="bs-docs-featurette">
+  <div class="container">
+    <h2 class="bs-docs-featurette-title">Our goals and activity</h2>
+    <p class="lead">We are not only using, but developing and improving open source technologies and solutions so that we can return the favour done by the communities to the world and us.</p>
+    <p class="lead">Our goal is to create softwares of the highest quality that will be useful even for the next generation.</p>
+    <p class="lead">We wish to be present on the global market with competitive prices and world-class products.</p>
+    <p class="lead">Our prevailing goal is to gain maximum customer satisfaction and trust.</p>
+	
+    <a href="https://github.com/everit-org" class="btn btn-outline btn-lg">View the Everit Opensource GitHub page</a>
+  </div>
+</div>
+
+<div class="bs-docs-featurette">
+  <div class="container">
+    <h2 class="bs-docs-featurette-title">The Present and Future of Everit</h2>
+    <p class="lead">Today, we own numerous open source technologies. Together with our skilled and commited IT specialists, we always strive to provide optimum solutions for our clients.</p>
+    <p class="lead">We play a key role in many of the most important IT projects in Hungary, and we have also proved our expertise on the international stage several times.</p>
+	<p class="lead">Our future goal is to become an inter-nationally acknowledged company being not only a user but also an active developer of the most modern technologies in the world. Also, we wish to provide exemplary and unique IT solutions that notably affect the relevant fields of computer science.</p>
+  </div>
+</div>
+
+<div class="bs-docs-featurette">
+  <div class="container">
+    <h2 class="bs-docs-featurette-title">About us</h2>
+    <p class="lead">We set up Everit in 2008 with the purpose of creating and providing high-quality and reasonably priced software solutions and IT services for its clients by means of innovative open source technologies.</p>
+  </div>
+</div>
+
+
+    <!-- Footer
+================================================== -->
+<footer class="bs-docs-footer" role="contentinfo">
+  <div class="container">
+    <div class="bs-docs-social">
+  <ul class="bs-docs-social-buttons">
+	<li class="follow-btn">
+      	<iframe allowtransparency="true" frameborder="0" scrolling="no"
+				src="http://platform.twitter.com/widgets/follow_button.html?screen_name=EveritOrg"
+				class="twitter-follow-button twitter-follow-button" title="Twitter Follow Button" data-twttr-rendered="true" style="width:300px; height:20px;">
+		</iframe>
+    </li>
+	<li class="tweet-btn">
+		<iframe allowtransparency="true" frameborder="0" scrolling="no"
+				src="https://platform.twitter.com/widgets/tweet_button.html?url=http://www.everit.biz/&text=EveritOrg"
+				style="width:130px; height:20px;"></iframe>    </li>
+  </ul>
+</div>
+
+  </div>
+</footer>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+
+  </body>
 </html>
