--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div class="container">
     <h2 class="bs-docs-featurette-title">Our goals and activity</h2>
     <p class="lead">We are not only using, but developing and improving open source technologies and solutions so that we can return the favour done by the communities to the world and us.</p>
-    <p class="lead">Our goal is to create softwares of the highest quality that will be useful even for the next generation.</p>
+    <p class="lead">Our goal is to create software of the highest quality that will be useful even for the next generation.</p>
     <p class="lead">We wish to be present on the global market with competitive prices and world-class products.</p>
     <p class="lead">Our prevailing goal is to gain maximum customer satisfaction and trust.</p>
 	
@@ -69,9 +69,9 @@
 <div class="bs-docs-featurette">
   <div class="container">
     <h2 class="bs-docs-featurette-title">The Present and Future of Everit</h2>
-    <p class="lead">Today, we own numerous open source technologies. Together with our skilled and commited IT specialists, we always strive to provide optimum solutions for our clients.</p>
+    <p class="lead">Today, we own numerous open source technologies. Together with our skilled and committed IT specialists, we always strive to provide optimum solutions for our clients.</p>
     <p class="lead">We play a key role in many of the most important IT projects in Hungary, and we have also proved our expertise on the international stage several times.</p>
-	<p class="lead">Our future goal is to become an inter-nationally acknowledged company being not only a user but also an active developer of the most modern technologies in the world. Also, we wish to provide exemplary and unique IT solutions that notably affect the relevant fields of computer science.</p>
+	<p class="lead">Our future goal is to become an internationally acknowledged company being not only a user but also an active developer of the most modern technologies in the world. Also, we wish to provide exemplary and unique IT solutions that notably affect the relevant fields of computer science.</p>
   </div>
 </div>
 
