--- a/components.html
+++ b/components.html
@@ -33,9 +33,9 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://twitter.com/EveritOrg">Twitter</a>
+                    <li><a href="http://www.everit.biz/" target="_blank">Enterprise</a>
                     </li>
-                    <li><a href="http://everitorg.wordpress.com/">Blog</a>
+                    <li><a href="http://everitorg.wordpress.com/" target="_blank">Blog</a>
                     </li>
                 </ul>
             </nav>
@@ -44,7 +44,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="bs-docs-masthead everit-header">
         <div class="container">
-            <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">E</span>
+            <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
+                <img src="fonts/e2.png" alt="some_text" width="140" height="140">
+            </span>
             <p class="lead">Open source components of Everit Org.</p>
         </div>
     </div>
