changed Everit logo changed twitter link to enterprise removed unused glyphicons

--- a/components.html
+++ b/components.html
@@ -33,9 +33,9 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://twitter.com/EveritOrg">Twitter</a>
+                    <li><a href="http://www.everit.biz/" target="_blank">Enterprise</a>
                     </li>
-                    <li><a href="http://everitorg.wordpress.com/">Blog</a>
+                    <li><a href="http://everitorg.wordpress.com/" target="_blank">Blog</a>
                     </li>
                 </ul>
             </nav>
@@ -44,8 +44,10 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="bs-docs-masthead everit-header">
         <div class="container">
-            <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">E</span>
-            <p class="lead">Open source components of Everit Org.</p>
+            <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
+                <img src="fonts/e.png" alt="some_text" width="125" height="125">
+            </span>
+            <p class="lead">Open source components of Everit Org</p>
         </div>
     </div>
     <div class="container">
@@ -225,7 +227,7 @@
         </div>
         <div class="col-md-2 col-sm-0 col-xs-0">
             <nav id="affix-nav">
-                <ul class=" nav nav-pills nav-stacked everit-affix" data-spy="affix" data-offset-top="350" data-offset-bottom="140">
+                <ul class=" nav nav-pills nav-stacked" data-spy="affix" data-offset-top="350" data-offset-bottom="140">
                     <li class="active">
                         <a href="#dev_tools">Development Tools</a>
                     </li>
