--- a/index.html
+++ b/index.html
@@ -38,23 +38,21 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://twitter.com/EveritOrg">Twitter</a>
+                    <li><a href="http://www.everit.biz" target="_blank">Enterprise</a>
                     </li>
-                    <li><a href="http://everitorg.wordpress.com/">Blog</a>
+                    <li><a href="http://everitorg.wordpress.com/" target="_blank">Blog</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
 
-
-    <!-- Page content of course! -->
     <div class="bs-docs-masthead everit-header" id="content" role="main">
         <div class="container">
-            <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">E</span>
-            <!-- <h1>Bootstrap</h1> -->
-            <p class="lead">Developer of an Open Future.</p>
-
+            <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
+                <img src="fonts/e.png" alt="some_text" width="125" height="125">
+            </span>
+            <p class="lead">Developer of an Open Future</p>
         </div>
     </div>
 
