logo changed to .svg

--- a/components.html
+++ b/components.html
@@ -45,7 +45,7 @@
     <div class="bs-docs-masthead everit-header">
         <div class="container">
             <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
-                <img src="fonts/e.png" alt="some_text" width="125" height="125">
+                <img class="logo" src="fonts/e.svg">
             </span>
             <p class="lead">Open source components of Everit Org</p>
         </div>
