--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="bs-docs-masthead everit-header" id="content" role="main">
         <div class="container">
             <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
-                <img src="fonts/e.png" alt="some_text" width="125" height="125">
+                <img class="logo" src="fonts/e.svg">
             </span>
             <p class="lead">Developer of an Open Future</p>
         </div>
