--- a/components.html
+++ b/components.html
@@ -227,7 +227,7 @@
         </div>
         <div class="col-md-2 col-sm-0 col-xs-0">
             <nav id="affix-nav">
-                <ul class=" nav nav-pills nav-stacked" data-spy="affix" data-offset-top="350" data-offset-bottom="140">
+                <ul class=" nav nav-pills nav-stacked everit-affix" data-spy="affix" data-offset-top="350" data-offset-bottom="140">
                     <li class="active">
                         <a href="#dev_tools">Development Tools</a>
                     </li>
