changed logo added favicon

--- a/components.html
+++ b/components.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Everit Opensource Components</title>
+    <link rel="icon" type="image/ico" href="fonts/favicon.ico">
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -45,7 +46,7 @@
     <div class="bs-docs-masthead everit-header">
         <div class="container">
             <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
-                <img class="logo" src="fonts/e.svg">
+                <img class="logo2" src="fonts/usuzi_e.svg">
             </span>
             <p class="lead">Open source components of Everit Org</p>
         </div>
