changed everit logo for saved-by-zero font added favicon

--- a/components.html
+++ b/components.html
@@ -46,7 +46,7 @@
     <div class="bs-docs-masthead everit-header">
         <div class="container">
             <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
-                <img class="logo2" src="fonts/usuzi_e.svg">
+                <img class="logo" src="fonts/sbz_e.svg">
             </span>
             <p class="lead">Open source components of Everit Org</p>
         </div>
@@ -148,12 +148,6 @@
                     <h2>thymeleaf-mvel2</h2>
                     <p>Classes that make it possible to use thymeleaf with Mvel2 as an expression evaluator</p>
                     <p><a class="btn btn-outline btn-default" href="https://github.com/everit-org/thymeleaf-mvel2" role="button" target="_blank">View details &raquo;</a>
-                    </p>
-                </div>
-                <div class="col-md-6">
-                    <h2>"Heading"</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-                    <p><a class="btn btn-outline btn-default" href="#" role="button" target="_blank">View details &raquo;</a>
                     </p>
                 </div>
                 <div class="col-md-6">
