--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
         Everit OpenSource
     </title>
-
+    <link rel="icon" type="image/ico" href="fonts/favicon.ico">
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -50,7 +50,7 @@
     <div class="bs-docs-masthead everit-header" id="content" role="main">
         <div class="container">
             <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
-                <img class="logo" src="fonts/e.svg">
+                <img class="logo" src="fonts/sbz_e.svg"> 
             </span>
             <p class="lead">Developer of an Open Future</p>
         </div>
@@ -64,7 +64,7 @@
             <p class="lead">We wish to be present on the global market with competitive prices and world-class products.</p>
             <p class="lead">Our prevailing goal is to gain maximum customer satisfaction and trust.</p>
 
-            <a href="https://github.com/everit-org" class="btn btn-outline btn-lg">View the Everit Opensource GitHub page</a>
+            <a href="https://github.com/everit-org" target="_blank" class="btn btn-outline btn-lg">Visit the Everit Opensource GitHub page</a>
         </div>
     </div>
     <hr class="featurette-divider">
