--- a/components.html
+++ b/components.html
@@ -13,6 +13,12 @@
     <!-- Custom styles for this template -->
     <link href="css/docs.min.css" rel="stylesheet">
     <link href="css/everit.css" rel="stylesheet">
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-15041869-4']);
+        _gaq.push(['_setDomainName', 'everit.org']);
+        _gaq.push(['_trackPageview']);
+    </script>
 </head>
 
 <body data-spy="scroll" data-target="#affix-nav">
@@ -269,6 +275,16 @@
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/bootstrap.min.js "></script>
     <script src="js/everit.js "></script>
+    <script type="text/javascript">
+        (function () {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 </body>
 
 </html>
