added cookbook page added cname file

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <li>
                         <a href="components.html">Components</a>
                     </li>
+                    <li>
+                        <a href="cookbook.html">Cookbook</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://www.everit.biz" target="_blank">Enterprise</a>
