--- a/components.html
+++ b/components.html
@@ -38,6 +38,9 @@
                     <li>
                         <a href="components.html">Components</a>
                     </li>
+                    <li>
+                        <a href="cookbook.html">Cookbook</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://www.everit.biz/" target="_blank">Enterprise</a>
