added old site page changed twitter link always visible scrollbar

--- a/oldsite.html
+++ b/oldsite.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Everit Cookbook
+        Everit Old Site
     </title>
     <link rel="icon" type="image/ico" href="fonts/favicon.ico">
     <!-- Bootstrap core CSS -->
@@ -34,44 +34,44 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand ">Everit</a>
+                <a href="index.html" class="navbar-brand">Everit</a>
             </div>
-            <nav class="collapse navbar-collapse bs-navbar-collapse " role="navigation ">
-                <ul class="nav navbar-nav ">
+            <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+                <ul class="nav navbar-nav">
                     <li>
-                        <a href="components.html ">Components</a>
+                        <a href="components.html">Components</a>
                     </li>
                     <li>
-                        <a href="cookbook.html ">Cookbook</a>
+                        <a href="cookbook.html">Cookbook</a>
                     </li>
                     <li>
-                        <a href="oldsite.html ">Old site</a>
+                        <a href="oldsite.html">Old site</a>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right ">
-                    <li><a href="http://www.everit.biz " target="_blank ">Enterprise</a>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="http://www.everit.biz" target="_blank">Enterprise</a>
                     </li>
-                    <li><a href="http://everitorg.wordpress.com/ " target="_blank ">Blog</a>
+                    <li><a href="http://everitorg.wordpress.com/" target="_blank">Blog</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <div class="bs-docs-masthead everit-header " id="content " role="main ">
-        <div class="container ">
-            <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline ">
-                <img class="logo " src="fonts/sbz_e.svg "> 
+    <div class="bs-docs-masthead everit-header" id="content" role="main">
+        <div class="container">
+            <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
+                <img class="logo" src="fonts/sbz_e.svg"> 
             </span>
-            <p class="lead ">Developer of an Open Future</p>
+            <p class="lead">Developer of an Open Future</p>
         </div>
     </div>
 
-    <div class="bs-docs-featurette ">
-        <div class="container ">
-            <h2 class="bs-docs-featurette-title ">Coming soon...</h2>
-            <p class="lead ">The goal of the cookbook is to have a central place where all documentation of Everit is accessible with samples.</p>
-            <a href="https://github.com/everit-org/cookbook " target="_blank " class="btn btn-outline btn-lg ">Visit the GitHub page</a>
+    <div class="bs-docs-featurette">
+        <div class="container">
+            <h2 class="bs-docs-featurette-title">Looking for our old site?</h2>
+            <p class="lead">We archived it, so you can download and browse it like the new one!</p>
+            <a href="#" class="btn btn-outline btn-lg">Download the old site</a>
         </div>
     </div>
     </div>
@@ -84,7 +84,7 @@
         <div class="container">
             <div class="bs-docs-social">
                 <ul class="bs-docs-social-buttons">
-                    <li class="follow-btn">
+                    <li class="follow-btn ">
                         <a href="https://twitter.com/EveritOrg" class="twitter-follow-button" data-show-count="true">Follow @EveritOrg</a>
                     </li>
                     <li class="tweet-btn">
@@ -100,7 +100,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/everit.js"></script>
+    <script src="js/everit.js "></script>
     <script type="text/javascript">
         (function () {
             var ga = document.createElement('script');
