--- a/components.html
+++ b/components.html
@@ -41,6 +41,9 @@
                     <li>
                         <a href="cookbook.html">Cookbook</a>
                     </li>
+                    <li>
+                        <a href="oldsite.html">Old site</a>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="http://www.everit.biz/" target="_blank">Enterprise</a>
@@ -264,7 +267,7 @@
                         <a href="https://twitter.com/EveritOrg" class="twitter-follow-button" data-show-count="true">Follow @EveritOrg</a>
                     </li>
                     <li class="tweet-btn">
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.everit.biz/">Tweet</a>
+                        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.everit.org/">Tweet</a>
                     </li>
                 </ul>
             </div>
