changed cookbook menu page to documentation

--- a/documentation.html
+++ b/documentation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Everit Cookbook
+        Everit Documentation
     </title>
     <link rel="icon" type="image/ico" href="fonts/favicon.ico">
     <!-- Bootstrap core CSS -->
@@ -42,7 +42,7 @@
                         <a href="components.html ">Components</a>
                     </li>
                     <li>
-                        <a href="cookbook.html ">Cookbook</a>
+                        <a href="documentation.html">Documentation</a>
                     </li>
                     <li>
                         <a href="oldsite.html ">Old site</a>
@@ -66,12 +66,22 @@
             <p class="lead ">Developer of an Open Future</p>
         </div>
     </div>
-
-    <div class="bs-docs-featurette ">
-        <div class="container ">
-            <h2 class="bs-docs-featurette-title ">Coming soon...</h2>
-            <p class="lead ">The goal of the cookbook is to have a central place where all documentation of Everit is accessible with samples.</p>
-            <a href="https://github.com/everit-org/cookbook " target="_blank " class="btn btn-outline btn-lg ">Visit the GitHub page</a>
+    <div class="container">
+        <div class="col-md-10">
+            <div class="bs-docs-featurette" id="cookbook">
+                <h2 class="bs-docs-featurette-title ">Cookbook</h2>
+                <p class="lead ">The goal of the cookbook is to have a central place where all documentation of Everit is accessible with samples.</p>
+                <a href="https://github.com/everit-org/cookbook " target="_blank " class="btn btn-outline btn-lg " disabled="disabled">Coming soon...</a>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <nav id="affix-nav">
+                <ul class=" nav nav-pills nav-stacked everit-affix" data-spy="affix" data-offset-top="350" data-offset-bottom="140">
+                    <li class="active">
+                        <a href="#cookbook">Cookbook</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
     </div>
