--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="components.html">Components</a>
                     </li>
                     <li>
-                        <a href="cookbook.html">Cookbook</a>
+                        <a href="documentation.html">Documentation</a>
                     </li>
                     <li>
                         <a href="oldsite.html">Old site</a>
