--- a/oldsite.html
+++ b/oldsite.html
@@ -42,7 +42,7 @@
                         <a href="components.html">Components</a>
                     </li>
                     <li>
-                        <a href="cookbook.html">Cookbook</a>
+                        <a href="documentation.html">Documentation</a>
                     </li>
                     <li>
                         <a href="oldsite.html">Old site</a>
@@ -71,7 +71,7 @@
         <div class="container">
             <h2 class="bs-docs-featurette-title">Looking for our old site?</h2>
             <p class="lead">We archived it, so you can download and browse it like the new one!</p>
-            <a href="#" class="btn btn-outline btn-lg">Download the old site</a>
+            <a href="#" class="btn btn-outline btn-lg" disabled="disabled">Download the old site of everit.org</a>
         </div>
     </div>
     </div>
