--- a/components.html
+++ b/components.html
@@ -39,7 +39,7 @@
                         <a href="components.html">Components</a>
                     </li>
                     <li>
-                        <a href="cookbook.html">Cookbook</a>
+                        <a href="documentation.html">Documentation</a>
                     </li>
                     <li>
                         <a href="oldsite.html">Old site</a>
@@ -84,15 +84,15 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <h2>testrunner-junit4</h2>
-                        <p>JUnit 4 based test runner engine for the testrunner bundle.</p>
-                        <p><a class="btn btn-outline btn-default" href="https://github.com/everit-org/osgi-testrunner-junit4" role="button" target="_blank">View details &raquo;</a>
-                        </p>
-                    </div>
-                    <div class="col-md-6">
                         <h2>testrunner</h2>
                         <p>Runs JUnit test objects that are exposed as OSGi Services</p>
                         <p><a class="btn btn-outline btn-default" href="https://github.com/everit-org/osgi-testrunner" role="button" target="_blank">View details &raquo;</a>
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <h2>testrunner-junit4</h2>
+                        <p>JUnit 4 based test runner engine for the testrunner bundle.</p>
+                        <p><a class="btn btn-outline btn-default" href="https://github.com/everit-org/osgi-testrunner-junit4" role="button" target="_blank">View details &raquo;</a>
                         </p>
                     </div>
                 </div>
@@ -231,6 +231,22 @@
                     </p>
                 </div>
             </div>
+            <hr class="featurette-divider">
+            <div class="row bs-docs-featurette" id="cache">
+                <h2 class="bs-docs-featurette-title">Cache</h2>
+                <div class="col-md-6">
+                    <h2>cache-api</h2>
+                    <p>Cache instances can be used inside an OSGi environment with this API. The implementations should provide at least two components. One for CacheFactory and one for CacheConfiguration.</p>
+                    <p><a class="btn btn-outline btn-default" href="https://github.com/everit-org/cache-api" role="button" target="_blank">View details &raquo;</a>
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <h2>cache-infinispan</h2>
+                    <p>An Infinispan based component which implements the org.everit.osgi.cache.api so it can configure and return a ready to use cache instance.</p>
+                    <p><a class="btn btn-outline btn-default" href="https://github.com/everit-org/cache-infinispan" role="button" target="_blank">View details &raquo;</a>
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="col-md-2 col-sm-0 col-xs-0">
             <nav id="affix-nav">
@@ -252,6 +268,9 @@
                     </li>
                     <li>
                         <a href="#jira">Jira</a>
+                    </li>
+                    <li>
+                        <a href="#cache">Cache</a>
                     </li>
                 </ul>
             </nav>
