fixed w3cvalidation issues

--- a/components.html
+++ b/components.html
@@ -58,7 +58,7 @@
     <div class="bs-docs-masthead everit-header">
         <div class="container">
             <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
-                <img class="logo" src="fonts/sbz_e.svg">
+                <img class="logo" src="fonts/sbz_e.svg" alt="E">
             </span>
             <p class="lead">Open source components of Everit Org</p>
         </div>
