--- a/documentation.html
+++ b/documentation.html
@@ -36,7 +36,7 @@
                 </button>
                 <a href="index.html" class="navbar-brand ">Everit</a>
             </div>
-            <nav class="collapse navbar-collapse bs-navbar-collapse " role="navigation ">
+            <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav ">
                     <li>
                         <a href="components.html ">Components</a>
@@ -49,19 +49,19 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right ">
-                    <li><a href="http://www.everit.biz " target="_blank ">Enterprise</a>
+                    <li><a href="http://www.everit.biz " target="_blank">Enterprise</a>
                     </li>
-                    <li><a href="http://everitorg.wordpress.com/ " target="_blank ">Blog</a>
+                    <li><a href="http://everitorg.wordpress.com/ " target="_blank">Blog</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <div class="bs-docs-masthead everit-header " id="content " role="main ">
+    <div class="bs-docs-masthead everit-header" id="content" role="main">
         <div class="container ">
             <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline ">
-                <img class="logo " src="fonts/sbz_e.svg "> 
+                <img class="logo " src="fonts/sbz_e.svg" alt="E"> 
             </span>
             <p class="lead ">Developer of an Open Future</p>
         </div>
@@ -71,7 +71,7 @@
             <div class="bs-docs-featurette" id="cookbook">
                 <h2 class="bs-docs-featurette-title ">Cookbook</h2>
                 <p class="lead ">The goal of the cookbook is to have a central place where all documentation of Everit is accessible with samples.</p>
-                <a href="https://github.com/everit-org/cookbook " target="_blank " class="btn btn-outline btn-lg " disabled="disabled">Coming soon...</a>
+                <a href="https://github.com/everit-org/cookbook " target="_blank" class="btn btn-outline btn-lg " disabled="disabled">Coming soon...</a>
             </div>
         </div>
         <div class="col-md-2">
@@ -83,7 +83,6 @@
                 </ul>
             </nav>
         </div>
-    </div>
     </div>
 
 
