--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="bs-docs-masthead everit-header" id="content" role="main">
         <div class="container">
             <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
-                <img class="logo" src="fonts/sbz_e.svg"> 
+                <img class="logo" src="fonts/sbz_e.svg" alt="E"> 
             </span>
             <p class="lead">Developer of an Open Future</p>
         </div>
