--- a/oldsite.html
+++ b/oldsite.html
@@ -61,7 +61,7 @@
     <div class="bs-docs-masthead everit-header" id="content" role="main">
         <div class="container">
             <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
-                <img class="logo" src="fonts/sbz_e.svg"> 
+                <img class="logo" src="fonts/sbz_e.svg" alt="E"> 
             </span>
             <p class="lead">Developer of an Open Future</p>
         </div>
@@ -73,7 +73,6 @@
             <p class="lead">We archived it, so you can download and browse it like the new one!</p>
             <a href="#" class="btn btn-outline btn-lg" disabled="disabled">Download the old site of everit.org</a>
         </div>
-    </div>
     </div>
 
 
