--- a/oldsite.html
+++ b/oldsite.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
         Everit Old Site
     </title>
@@ -13,6 +14,13 @@
     <!-- Documentation extras -->
     <link href="css/docs.min.css" rel="stylesheet">
     <link href="css/everit.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.min.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->
+
     <script type="text/javascript">
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-15041869-4']);
