--- a/oldsite.html
+++ b/oldsite.html
@@ -19,6 +19,7 @@
     <!--[if lt IE 9]>
     <script src="js/html5shiv.min.js"></script>
     <script src="js/respond.min.js"></script>
+    <script src="js/respond.matchmedia.addListener.min.js"></script>
     <![endif]-->
 
     <script type="text/javascript">
