--- a/documentation.html
+++ b/documentation.html
@@ -2,133 +2,122 @@
 <html>
 
 <head>
-    <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>
-        Everit Documentation
-    </title>
-    <link rel="icon" type="image/ico" href="fonts/favicon.ico">
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+<meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Everit Documentation</title>
+<link rel="icon" type="image/ico" href="fonts/favicon.ico">
+<!-- Bootstrap core CSS -->
+<link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Documentation extras -->
-    <link href="css/docs.min.css" rel="stylesheet">
-    <link href="css/everit.css" rel="stylesheet">
+<!-- Documentation extras -->
+<link href="css/docs.min.css" rel="stylesheet">
+<link href="css/everit.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
     <script src="js/html5shiv.min.js"></script>
     <script src="js/respond.min.js"></script>
     <script src="js/respond.matchmedia.addListener.min.js"></script>
     <![endif]-->
 
-    <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-15041869-4']);
-        _gaq.push(['_setDomainName', 'everit.org']);
-        _gaq.push(['_trackPageview']);
-    </script>
+<script type="text/javascript">
+	var _gaq = _gaq || [];
+	_gaq.push([ '_setAccount', 'UA-15041869-4' ]);
+	_gaq.push([ '_setDomainName', 'everit.org' ]);
+	_gaq.push([ '_trackPageview' ]);
+</script>
 </head>
 
 <body class="bs-docs-home">
-    <a class="sr-only" href="#content">Skip to main content</a>
+  <a class="sr-only" href="#content">Skip to main content</a>
 
-    <!-- Docs master nav -->
-    <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
-        <div class="container">
-            <div class="navbar-header">
-                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="index.html" class="navbar-brand ">Everit</a>
-            </div>
-            <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-                <ul class="nav navbar-nav ">
-                    <li>
-                        <a href="components.html ">Components</a>
-                    </li>
-                    <li>
-                        <a href="documentation.html">Documentation</a>
-                    </li>
-                    <li>
-                        <a href="oldsite.html ">Old site</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right ">
-                    <li><a href="http://www.everit.biz " target="_blank">Enterprise</a>
-                    </li>
-                    <li><a href="http://everitorg.wordpress.com/ " target="_blank">Blog</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <div class="bs-docs-masthead everit-header" id="content" role="main">
-        <div class="container ">
-            <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline ">
-                <img class="logo " src="fonts/sbz_e.svg" alt="E"> 
-            </span>
-            <p class="lead ">Developer of an Open Future</p>
-        </div>
-    </div>
+  <!-- Docs master nav -->
+  <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
     <div class="container">
-        <div class="col-md-10">
-            <div class="bs-docs-featurette" id="cookbook">
-                <h2 class="bs-docs-featurette-title ">Cookbook</h2>
-                <p class="lead ">The goal of the cookbook is to have a central place where all documentation of Everit is accessible with samples.</p>
-                <a href="https://github.com/everit-org/cookbook " target="_blank" class="btn btn-outline btn-lg " disabled="disabled">Coming soon...</a>
-            </div>
-        </div>
-        <div class="col-md-2">
-            <nav id="affix-nav">
-                <ul class=" nav nav-pills nav-stacked everit-affix" data-spy="affix" data-offset-top="350" data-offset-bottom="140">
-                    <li class="active">
-                        <a href="#cookbook">Cookbook</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+      <div class="navbar-header">
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+          <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span
+            class="icon-bar"></span>
+        </button>
+        <a href="index.html" class="navbar-brand ">Everit</a>
+      </div>
+      <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+        <ul class="nav navbar-nav ">
+          <li><a href="components.html ">Components</a></li>
+          <li><a href="documentation.html">Documentation</a></li>
+          <li><a href="oldsite.html ">Old site</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right ">
+          <li><a href="http://www.everit.biz " target="_blank">Enterprise</a></li>
+          <li><a href="http://everitorg.wordpress.com/ " target="_blank">Blog</a></li>
+        </ul>
+      </nav>
     </div>
+  </header>
+
+  <div class="bs-docs-masthead everit-header" id="content" role="main">
+    <div class="container ">
+      <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline "> <img class="logo "
+        src="fonts/sbz_e.svg" alt="E">
+      </span>
+      <p class="lead ">Developer of an Open Future</p>
+    </div>
+  </div>
+  <div class="container">
+    <div class="col-md-10">
+      <div class="bs-docs-featurette" id="cookbook">
+        <h2 class="bs-docs-featurette-title ">Cookbook</h2>
+        <p class="lead ">The goal of the cookbook is to have a central place where all documentation of Everit is
+          accessible with samples.</p>
+        <a href="https://github.com/everit-org/cookbook " target="_blank" class="btn btn-outline btn-lg "
+          disabled="disabled">Coming soon...</a>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <nav id="affix-nav">
+        <ul class=" nav nav-pills nav-stacked everit-affix" data-spy="affix" data-offset-top="350"
+          data-offset-bottom="140">
+          <li class="active"><a href="#cookbook">Cookbook</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 
 
-    <!-- Footer
+  <!-- Footer
 ================================================== -->
-    <div></div>
-    <footer class="bs-docs-footer" role="contentinfo">
-        <div class="container">
-            <div class="bs-docs-social">
-                <ul class="bs-docs-social-buttons">
-                    <li class="follow-btn">
-                        <a href="https://twitter.com/EveritOrg" class="twitter-follow-button" data-show-count="true">Follow @EveritOrg</a>
-                    </li>
-                    <li class="tweet-btn">
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.everit.org/">Tweet</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+  <div></div>
+  <footer class="bs-docs-footer" role="contentinfo">
+    <div class="container">
+      <div class="bs-docs-social">
+        <ul class="bs-docs-social-buttons">
+          <li class="follow-btn"><a href="https://twitter.com/EveritOrg" class="twitter-follow-button"
+            data-show-count="true">Follow @EveritOrg</a></li>
+          <li class="tweet-btn"><a href="https://twitter.com/share" class="twitter-share-button"
+            data-url="http://www.everit.org/">Tweet</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
-    <!-- Bootstrap core JavaScript
+  <!-- Bootstrap core JavaScript
 ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery-2.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/everit.js"></script>
-    <script type="text/javascript">
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="js/jquery-2.1.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/everit.js"></script>
+  <script type="text/javascript">
+			(function() {
+				var ga = document.createElement('script');
+				ga.type = 'text/javascript';
+				ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl'
+						: 'http://www')
+						+ '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0];
+				s.parentNode.insertBefore(ga, s);
+			})();
+		</script>
 
 </body>
 
