--- a/index.html
+++ b/index.html
@@ -2,143 +2,140 @@
 <html>
 
 <head>
-    <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>
-        Everit OpenSource
-    </title>
-    <link rel="icon" type="image/ico" href="fonts/favicon.ico">
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+<meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Everit OpenSource</title>
+<link rel="icon" type="image/ico" href="fonts/favicon.ico">
+<!-- Bootstrap core CSS -->
+<link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Documentation extras -->
-    <link href="css/docs.min.css" rel="stylesheet">
-    <link href="css/everit.css" rel="stylesheet">
+<!-- Documentation extras -->
+<link href="css/docs.min.css" rel="stylesheet">
+<link href="css/everit.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
     <script src="js/html5shiv.min.js"></script>
     <script src="js/respond.min.js"></script>
     <script src="js/respond.matchmedia.addListener.min.js"></script>
     <![endif]-->
 
-    <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-15041869-4']);
-        _gaq.push(['_setDomainName', 'everit.org']);
-        _gaq.push(['_trackPageview']);
-    </script>
+<script type="text/javascript">
+	var _gaq = _gaq || [];
+	_gaq.push([ '_setAccount', 'UA-15041869-4' ]);
+	_gaq.push([ '_setDomainName', 'everit.org' ]);
+	_gaq.push([ '_trackPageview' ]);
+</script>
 </head>
 
 <body class="bs-docs-home">
-    <a class="sr-only" href="#content">Skip to main content</a>
+  <a class="sr-only" href="#content">Skip to main content</a>
 
-    <!-- Docs master nav -->
-    <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
-        <div class="container">
-            <div class="navbar-header">
-                <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="#" class="navbar-brand">Everit</a>
-            </div>
-            <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="components.html">Components</a>
-                    </li>
-                    <li>
-                        <a href="documentation.html">Documentation</a>
-                    </li>
-                    <li>
-                        <a href="oldsite.html">Old site</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="http://www.everit.biz" target="_blank">Enterprise</a>
-                    </li>
-                    <li><a href="http://everitorg.wordpress.com/" target="_blank">Blog</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <div class="bs-docs-masthead everit-header" id="content" role="main">
-        <div class="container">
-            <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">
-                <img class="logo" src="fonts/sbz_e.svg" alt="E"> 
-            </span>
-            <p class="lead">Developer of an Open Future</p>
-        </div>
+  <!-- Docs master nav -->
+  <header class="navbar navbar-static-top bs-docs-nav" id="top" role="banner">
+    <div class="container">
+      <div class="navbar-header">
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+          <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span
+            class="icon-bar"></span>
+        </button>
+        <a href="#" class="navbar-brand">Everit</a>
+      </div>
+      <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+        <ul class="nav navbar-nav">
+          <li><a href="components.html">Components</a></li>
+          <li><a href="documentation.html">Documentation</a></li>
+          <li><a href="oldsite.html">Old site</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="http://www.everit.biz" target="_blank">Enterprise</a></li>
+          <li><a href="http://everitorg.wordpress.com/" target="_blank">Blog</a></li>
+        </ul>
+      </nav>
     </div>
+  </header>
 
-    <div class="bs-docs-featurette">
-        <div class="container">
-            <h2 class="bs-docs-featurette-title">Our goals and activity</h2>
-            <p class="lead">We are not only using, but developing and improving open source technologies and solutions so that we can return the favour done by the communities to the world and us.</p>
-            <p class="lead">Our goal is to create software of the highest quality that will be useful even for the next generation.</p>
-            <p class="lead">We wish to be present on the global market with competitive prices and world-class products.</p>
-            <p class="lead">Our prevailing goal is to gain maximum customer satisfaction and trust.</p>
-
-            <a href="https://github.com/everit-org" target="_blank" class="btn btn-outline btn-lg">Visit the Everit Opensource GitHub page</a>
-        </div>
+  <div class="bs-docs-masthead everit-header" id="content" role="main">
+    <div class="container">
+      <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"> <img class="logo"
+        src="fonts/sbz_e.svg" alt="E">
+      </span>
+      <p class="lead">Developer of an Open Future</p>
     </div>
-    <hr class="featurette-divider">
-    <div class="bs-docs-featurette">
-        <div class="container">
-            <h2 class="bs-docs-featurette-title">The Present and Future of Everit</h2>
-            <p class="lead">Today, we own numerous open source technologies. Together with our skilled and committed IT specialists, we always strive to provide optimum solutions for our clients.</p>
-            <p class="lead">We play a key role in many of the most important IT projects in Hungary, and we have also proved our expertise on the international stage several times.</p>
-            <p class="lead">Our future goal is to become an internationally acknowledged company being not only a user but also an active developer of the most modern technologies in the world. Also, we wish to provide exemplary and unique IT solutions that notably affect the relevant fields of computer science.</p>
-        </div>
+  </div>
+
+  <div class="bs-docs-featurette">
+    <div class="container">
+      <h2 class="bs-docs-featurette-title">Our goals and activity</h2>
+      <p class="lead">We are not only using, but developing and improving open source technologies and solutions so
+        that we can return the favour done by the communities to the world and us.</p>
+      <p class="lead">Our goal is to create software of the highest quality that will be useful even for the next
+        generation.</p>
+      <p class="lead">We wish to be present on the global market with competitive prices and world-class products.</p>
+      <p class="lead">Our prevailing goal is to gain maximum customer satisfaction and trust.</p>
+
+      <a href="https://github.com/everit-org" target="_blank" class="btn btn-outline btn-lg">Visit the Everit
+        Opensource GitHub page</a>
     </div>
-    <hr class="featurette-divider">
-    <div class="bs-docs-featurette">
-        <div class="container">
-            <h2 class="bs-docs-featurette-title">About us</h2>
-            <p class="lead">We set up Everit in 2008 with the purpose of creating and providing high-quality and reasonably priced software solutions and IT services for its clients by means of innovative open source technologies.</p>
-        </div>
+  </div>
+  <hr class="featurette-divider">
+  <div class="bs-docs-featurette">
+    <div class="container">
+      <h2 class="bs-docs-featurette-title">The Present and Future of Everit</h2>
+      <p class="lead">Today, we own numerous open source technologies. Together with our skilled and committed IT
+        specialists, we always strive to provide optimum solutions for our clients.</p>
+      <p class="lead">We play a key role in many of the most important IT projects in Hungary, and we have also
+        proved our expertise on the international stage several times.</p>
+      <p class="lead">Our future goal is to become an internationally acknowledged company being not only a user but
+        also an active developer of the most modern technologies in the world. Also, we wish to provide exemplary and
+        unique IT solutions that notably affect the relevant fields of computer science.</p>
     </div>
+  </div>
+  <hr class="featurette-divider">
+  <div class="bs-docs-featurette">
+    <div class="container">
+      <h2 class="bs-docs-featurette-title">About us</h2>
+      <p class="lead">We set up Everit in 2008 with the purpose of creating and providing high-quality and
+        reasonably priced software solutions and IT services for its clients by means of innovative open source
+        technologies.</p>
+    </div>
+  </div>
 
 
-    <!-- Footer
+  <!-- Footer
 ================================================== -->
-    <div></div>
-    <footer class="bs-docs-footer" role="contentinfo">
-        <div class="container">
-            <div class="bs-docs-social">
-                <ul class="bs-docs-social-buttons">
-                    <li class="follow-btn ">
-                        <a href="https://twitter.com/EveritOrg" class="twitter-follow-button" data-show-count="true">Follow @EveritOrg</a>
-                    </li>
-                    <li class="tweet-btn">
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.everit.org/">Tweet</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+  <div></div>
+  <footer class="bs-docs-footer" role="contentinfo">
+    <div class="container">
+      <div class="bs-docs-social">
+        <ul class="bs-docs-social-buttons">
+          <li class="follow-btn "><a href="https://twitter.com/EveritOrg" class="twitter-follow-button"
+            data-show-count="true">Follow @EveritOrg</a></li>
+          <li class="tweet-btn"><a href="https://twitter.com/share" class="twitter-share-button"
+            data-url="http://www.everit.org/">Tweet</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
-    <!-- Bootstrap core JavaScript
+  <!-- Bootstrap core JavaScript
 ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery-2.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/everit.js "></script>
-    <script type="text/javascript">
-        (function () {
-            var ga = document.createElement('script');
-            ga.type = 'text/javascript';
-            ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="js/jquery-2.1.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/everit.js "></script>
+  <script type="text/javascript">
+			(function() {
+				var ga = document.createElement('script');
+				ga.type = 'text/javascript';
+				ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl'
+						: 'http://www')
+						+ '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0];
+				s.parentNode.insertBefore(ga, s);
+			})();
+		</script>
 
 </body>
 
