Uploading archive site and linking cookbook

--- a/documentation.html
+++ b/documentation.html
@@ -67,10 +67,9 @@
     <div class="col-md-10">
       <div class="bs-docs-featurette" id="cookbook">
         <h2 class="bs-docs-featurette-title ">Cookbook</h2>
-        <p class="lead ">The goal of the cookbook is to have a central place where all documentation of Everit is
-          accessible with samples.</p>
-        <a href="https://github.com/everit-org/cookbook " target="_blank" class="btn btn-outline btn-lg "
-          disabled="disabled">Coming soon...</a>
+        <p class="lead ">The goal of the cookbook is to provide a step-by-step style documentation for developers
+          who meet OSGi and the Everit related technologies for the first time.</p>
+        <a href="http://cookbook.everit.org " target="_blank" class="btn btn-outline btn-lg ">Start reading</a>
       </div>
     </div>
     <div class="col-md-2">
