--- a/oldsite.html
+++ b/oldsite.html
@@ -68,7 +68,7 @@
     <div class="container">
       <h2 class="bs-docs-featurette-title">Looking for our old site?</h2>
       <p class="lead">We archived it, so you can download and browse it like the new one!</p>
-      <a href="#" class="btn btn-outline btn-lg" disabled="disabled">Download the old site of everit.org</a>
+      <a href="blobs/www-everit-org-2013.7z" class="btn btn-outline btn-lg">Download the old site of everit.org</a>
     </div>
   </div>
 
