Adding right titles and 404

--- a/documentation.html
+++ b/documentation.html
@@ -60,7 +60,7 @@
       <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline "> <img class="logo "
         src="fonts/sbz_e.svg" alt="E">
       </span>
-      <p class="lead ">Developer of an Open Future</p>
+      <p class="lead ">Documentation</p>
     </div>
   </div>
   <div class="container">
