--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Everit Old Site</title>
+<title>Everit OpenSource</title>
 <link rel="icon" type="image/ico" href="fonts/favicon.ico">
 <!-- Bootstrap core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
           <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span
             class="icon-bar"></span>
         </button>
-        <a href="index.html" class="navbar-brand">Everit</a>
+        <a href="#" class="navbar-brand">Everit</a>
       </div>
       <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
         <ul class="nav navbar-nav">
@@ -60,15 +60,17 @@
       <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"> <img class="logo"
         src="fonts/sbz_e.svg" alt="E">
       </span>
-      <p class="lead">Graveyard</p>
+      <p class="lead">File or Page Not Found</p>
     </div>
   </div>
 
   <div class="bs-docs-featurette">
     <div class="container">
-      <h2 class="bs-docs-featurette-title">Looking for our old site?</h2>
-      <p class="lead">We archived it, so you can download and browse it like the new one!</p>
-      <a href="blobs/www-everit-org-2013.7z" class="btn btn-outline btn-lg">Download the old site of everit.org</a>
+      <h2 class="bs-docs-featurette-title">404</h2>
+      <p class="lead">
+        The page you are looking for does not exist. It might have been available on our old site. If that is the case,
+        please visit the <a href="oldsite.html">Old site</a> page and download the archive.
+      </p>
     </div>
   </div>
 
