--- a/404.html
+++ b/404.html
@@ -5,19 +5,19 @@
 <meta charset="utf-8" http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Everit OpenSource</title>
-<link rel="icon" type="image/ico" href="fonts/favicon.ico">
+<link rel="icon" type="image/ico" href="http://www.everit.org/fonts/favicon.ico">
 <!-- Bootstrap core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="http://www.everit.org/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Documentation extras -->
-<link href="css/docs.min.css" rel="stylesheet">
-<link href="css/everit.css" rel="stylesheet">
+<link href="http://www.everit.org/css/docs.min.css" rel="stylesheet">
+<link href="http://www.everit.org/css/everit.css" rel="stylesheet">
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
-    <script src="js/html5shiv.min.js"></script>
-    <script src="js/respond.min.js"></script>
-    <script src="js/respond.matchmedia.addListener.min.js"></script>
+    <script src="http://www.everit.org/js/html5shiv.min.js"></script>
+    <script src="http://www.everit.org/js/respond.min.js"></script>
+    <script src="http://www.everit.org/js/respond.matchmedia.addListener.min.js"></script>
     <![endif]-->
 
 <script type="text/javascript">
@@ -94,9 +94,9 @@
   <!-- Bootstrap core JavaScript
 ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
-  <script src="js/jquery-2.1.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/everit.js "></script>
+  <script src="http://www.everit.org/js/jquery-2.1.1.min.js"></script>
+  <script src="http://www.everit.org/js/bootstrap.min.js"></script>
+  <script src="http://www.everit.org/js/everit.js "></script>
   <script type="text/javascript">
 			(function() {
 				var ga = document.createElement('script');
