--- a/404.html
+++ b/404.html
@@ -58,7 +58,7 @@
   <div class="bs-docs-masthead everit-header" id="content" role="main">
     <div class="container">
       <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"> <img class="logo"
-        src="fonts/sbz_e.svg" alt="E">
+        src="http://www.everit.org/fonts/sbz_e.svg" alt="E">
       </span>
       <p class="lead">File or Page Not Found</p>
     </div>
