--- a/404.html
+++ b/404.html
@@ -43,9 +43,9 @@
       </div>
       <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
         <ul class="nav navbar-nav">
-          <li><a href="components.html">Components</a></li>
-          <li><a href="documentation.html">Documentation</a></li>
-          <li><a href="oldsite.html">Old site</a></li>
+          <li><a href="http://www.everit.org/components.html">Components</a></li>
+          <li><a href="http://www.everit.org/documentation.html">Documentation</a></li>
+          <li><a href="http://www.everit.org/oldsite.html">Old site</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="http://www.everit.biz" target="_blank">Enterprise</a></li>
@@ -69,7 +69,7 @@
       <h2 class="bs-docs-featurette-title">404</h2>
       <p class="lead">
         The page you are looking for does not exist. It might have been available on our old site. If that is the case,
-        please visit the <a href="oldsite.html">Old site</a> page and download the archive.
+        please visit the <a href="http://www.everit.org/oldsite.html">Old site</a> page and download the archive.
       </p>
     </div>
   </div>
